--- a/website/composer.json
+++ b/website/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "league/commonmark": "2.8.*",
 	"yidas/google-maps-services": "1.2.*",
-	"vlucas/phpdotenv": "5.6.*"
+	"vlucas/phpdotenv": "5.6.*",
+	"pragmarx/google2fa": "9.*"
     }
 }
